adding scss and custom cursor + style edits

--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -11,6 +11,7 @@
 
     <link href="../css/main.css" rel="stylesheet">
     <link href="../css/flexbox.css" rel="stylesheet">
+    <link href="../css/animate.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas text font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
@@ -22,13 +23,13 @@
 
 <body>
 
-    <div class="cursor rounded"></div>
+    <div class="cursor cursor-gradient"></div>
 
     <div class="container">
 
         <header>
             <nav class="box-header">
-                <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                <a href="../index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
                 <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
             </nav>
@@ -53,7 +54,7 @@
             <div class="section-container">
                 <section> <!-- project description -->
                     <h4>outcome</h4>
-                    <p> In this project, I designed an art direction strategy distinct to my personal ceramics business. This was applied across contexts to web identity, and print assets included with purchases to create a cohesive brand identity.</p>
+                    <p>In this project, I aimed to create a unique and cohesive brand identity for my personal ceramics business that aligned with my ceramic work, and values as an artist. I designed an art direction strategy distinct to my business and applied it across contexts to web identity and print assets included with purchases to create a consistent brand experience.</p>
                 </section>
 
                 <section> <!-- project process -->
@@ -165,7 +166,7 @@
     </div> <!-- END OF CONTENT WRAPPER -->
 
 
-
+    <script src="../js/script.js"></script>
 
 
 </body>
