--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -11,6 +11,7 @@
 
     <link href="../css/main.css" rel="stylesheet">
     <link href="../css/flexbox.css" rel="stylesheet">
+    <link href="../css/animate.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas text font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
@@ -22,13 +23,13 @@
 
 <body>
 
-    <div class="cursor rounded"></div>
+    <div class="cursor cursor-gradient"></div>
 
     <div class="container">
 
         <header>
             <nav class="box-header">
-                <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                <a href="../index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
                 <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
                 <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
             </nav>
@@ -38,9 +39,8 @@
             <section> <!-- project introduction -->
                 <div class="section-container">
                     <h2>Between Dreams and Reality (2022)</h2>
-                    <p>Graphic/interaction design course project exploring creation of visual identities applied to
-                        final
-                        microsite prototype using Figma</p>
+                    <p>Graphic/interaction design course project exploring creation of visual identity, and cross-medium application to assets and 
+                     microsite prototype using Figma</p>
                 </div>
 
                 <div class="image-box">
@@ -55,7 +55,7 @@
             <div class="section-container">
                 <section> <!-- project description -->
                     <h4>outcome</h4>
-                    <p> This microsite accompanies an art exhibition of tapestries telling the story of dreamlike
+                    <p> This project was centered around learning art direction and interaction design, and creating a graphic visual identity to iterate into a microsite prototype for a cultural arts client. Our microsite accompanies an art exhibition of tapestries telling the story of dreamlike
                         hallucinations experienced by the artist. The site walks users through the narrative, materials,
                         and
                         processes used to create the tapestries, enhancing understanding and appreciation while
@@ -97,11 +97,7 @@
             <div class="section-container">
                 <section> <!-- project process -->
                     <h4>process</h4>
-                    <p>The project began by studying the work of precedent designers to extract guiding design qualities
-                        and
-                        principles. These were applied in three weeks of graphic exploration, expressed first as posters
-                        and
-                        then graphic assets, culminating in the creation of three distinct art direction strategies.
+                    <p>The project began by studying the work of precedent designers to extract guiding design qualities. These were applied in three weeks of graphic exploration, where concepts were explored extensively, before being expressed in final posters and graphic assets, culminating in the creation of three distinct art direction strategies.
                         These
                         qualities and principles influenced both our approach and our practice, encouraging us to expand
                         our
@@ -110,6 +106,13 @@
             </div>
 
             <div class="image-box">
+
+                <figure class="image-caption-box">
+                    <img src="../img/iterations-2x.png" srcset="../img/iterations-1x.png 1x, ../img/iterations-2x.png 2x"
+                        alt="Four abstract posters advertising art exhibition">
+                    <figcaption class="p1 image-caption">each concept was explored extensively</figcaption>
+                </figure>
+
                 <figure class="image-caption-box">
                     <img src="../img/posters1-2x.png" srcset="../img/posters1-1x.png 1x, ../img/posters1-2x.png 2x"
                         alt="Four abstract posters advertising art exhibition">
@@ -237,55 +240,10 @@
         </footer>
 
 
-
-
-
-
-
-
-
-        <!-- <footer>
-            
-            <div class="box-header footer-spacing">
-                <div class="box-header-title">
-                    <h3>More Projects</h3>
-                </div>
-
-                <div class="box-footer">
-                    <div class="box-footer-project">
-                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
-                        <p class="p1">web and print brand identity</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="box-header footer-spacing">
-                <div class="box-header-title">
-                    <a href="../html/artisticparrot.html" class="box-header small-margin-bottom">back to top</a>
-                    <a href="../index.html" class="box-header medium-margin-bottom">back home</a>
-                    <a href="../html/styleguide.html" class="box-header" >styleguide</a>
-                </div>
-
-                <div class="box-footer">
-                    <div class="box-footer-project">
-                        <p>*artist, designer, maker of things</p>
-                        <p class="p1">©olivia steed 2023</p>
-                    </div>
-                </div>
-
-            </div>
-
-
-        </footer> -->
-
-
-
-
     </div> <!-- END OF CONTENT WRAPPER -->
 
 
-
+    <script src="../js/script.js"></script>
 
 
 </body>
