--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/flexbox.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
 
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas text font from Adobe-->
     <link rel="stylesheet" href="https://use.typekit.net/tci7dny.css"> <!-- neue haas display thin font from Adobe-->
@@ -22,7 +23,8 @@
 
 <body>
 
-    <div class="cursor rounded"></div>
+
+    <div class="cursor cursor-gradient"></div>
 
     <div class="container">
 
@@ -30,7 +32,7 @@
 
             <header>
                 <nav class="box-header">
-                    <a href="index.html" class="site-title box-header box-header-title">olivia steed*</a>
+                    <a href="index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
                     <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
                     <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
                 </nav>
@@ -39,11 +41,7 @@
 
             <section> <!-- bio/introduction -->
                 <div class="section-container">
-                    <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
-                        and
-                        art direction. I’m currently in my third year of studies at SFU’s <em>School of Interactive Arts
-                            and
-                            Technology</em> concentrating in design.</h3>
+                    <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration and art direction, which I apply to distinct and cohesive visual identities. I’m currently in my third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> concentrating in design, and am interested in visual design and art direction.</h3>
                 </div>
 
 
@@ -90,6 +88,9 @@
 
 
     </div> <!-- END OF CONTENT WRAPPER -->
+
+
+    <script src="js/script.js"></script>
 
 </body>
 
