--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -35,11 +35,12 @@
             </nav>
         </header>
 
-        <section class="medium-margin-bottom"> <!-- PROJECT CONTENT -->
+        <div class="medium-margin-bottom"> <!-- PROJECT CONTENT -->
             <section> <!-- project introduction -->
                 <div class="section-container">
                     <h2>Artisticparrot Branding (2022)</h2>
-                    <p>Creation of multi-platform visual brand identity for personal ceramics business using traditional illustration and Adobe Illustrator</p>
+                    <p>Creation of multi-platform visual brand identity for personal ceramics business using traditional
+                        illustration and Adobe Illustrator</p>
                 </div>
 
                 <div class="image-box">
@@ -54,12 +55,10 @@
             <div class="section-container">
                 <section> <!-- project description -->
                     <h4>outcome</h4>
-                    <p>In this project, I aimed to create a unique and cohesive brand identity for my personal ceramics business that aligned with my ceramic work, and values as an artist. I designed an art direction strategy distinct to my business and applied it across contexts to web identity and print assets included with purchases to create a consistent brand experience.</p>
-                </section>
-
-                <section> <!-- project process -->
-                    <h4>process</h4>
-                    <p>My ceramic work is mainly of personified everyday objects bringing life to the mundane. I created the tagline ‘pottery that’s alive’ to flesh out the brand identity and convey that my work is intended to act as characters in my customers’ lives. I drew simple doodles of birds and characters to convey this world customers are entering when supporting my brand and transformed them into sticker-like graphics. These create continuity across web and print mediums and are seen in the final brand identity including a logo, logotype, print assets like thank you cards, stickers, and postcards as well as web assets like banners and social media graphics.</p>
+                    <p>In this project, I aimed to create a unique and cohesive brand identity for my personal ceramics
+                        business that aligned with my ceramic work, and values as an artist. I designed an art direction
+                        strategy distinct to my business and applied it across contexts to web identity and print assets
+                        included with purchases to create a consistent brand experience.</p>
                 </section>
             </div>
 
@@ -71,33 +70,63 @@
                 </figure>
 
                 <figure class="image-caption-box">
+                    <img src="../img/stickers-2x.png" srcset="../img/stickers-1x.png 1x, ../img/stickers-2x.png 2x"
+                        alt="Parrot doodles and positive affirmation sticker graphics used in branding">
+                    <figcaption class="p1 image-caption">final brand graphics</figcaption>
+                </figure>
+            </div>
+
+            <div class="section-container">
+                <section> <!-- project process -->
+                    <h4>process</h4>
+                    <p>My ceramic work is mainly of personified everyday objects bringing life to the mundane. I created
+                        the tagline ‘pottery that’s alive’ to flesh out the brand identity and convey that my work is
+                        intended to act as characters in my customers’ lives. I drew simple doodles of birds and
+                        characters to convey this world customers are entering when supporting my brand and transformed
+                        them into sticker-like graphics. These are reconfigurable and create continuity across web and
+                        print and are seen in the final brand identity including a logo, logotype, thank you cards,
+                        stickers, postcards, banners and social media graphics. </p>
+                </section>
+            </div>
+
+            <div class="image-box">
+
+                <figure class="image-caption-box">
                     <img src="../img/doodles-2x.png" srcset="../img/doodles-1x.png 1x, ../img/doodles-2x.png 2x"
                         alt="Scan of sharpie doodles of budgies and cockatiels">
                     <figcaption class="p1 image-caption">scanned doodles that became brand graphics</figcaption>
                 </figure>
 
                 <figure class="image-caption-box">
-                    <img src="../img/stickers-2x.png" srcset="../img/stickers-1x.png 1x, ../img/stickers-2x.png 2x"
-                        alt="Parrot doodles and positive affirmation sticker graphics used in branding">
-                    <figcaption class="p1 image-caption">final sticker graphics</figcaption>
+                    <img src="../img/chaos-2x.png" srcset="../img/chaos-1x.png 1x, ../img/chaos-2x.png 2x"
+                        alt="Chaotic Illustrator file with brand identity iterations">
+                    <figcaption class="p1 image-caption">exploration on Illustrator</figcaption>
                 </figure>
             </div>
 
             <div class="section-container">
                 <section> <!-- project challenge -->
                     <h4>challenge</h4>
-                    <p>A challenge of this project was balancing the childish and fun angle of my work without alienating other audiences. Analysis of my sales states that most of my customers are older than me, so overly young branding was a risk. I remedied this by retaining a sense of maturity through muted colours and negative space, which reflects the aesthetic of my ceramics more accurately as well. In many of my projects, my biggest struggle is restraint as I typically design over-the-top initially and then strip back my work to keep only the strongest elements.</p>
+                    <p>A challenge of this project was balancing the childish and fun angle of my work without
+                        alienating other audiences. Analysis of my sales states that most of my customers are older than
+                        me, so overly young branding was a risk. I remedied this by retaining a sense of maturity
+                        through muted colours and negative space, which reflects the aesthetic of my ceramics more
+                        accurately as well. In many of my projects, my biggest struggle is restraint as I typically
+                        design over-the-top initially and then strip back my work to keep only the strongest elements.
+                    </p>
                 </section>
             </div>
 
             <div class="image-box">
                 <figure class="image-caption-box">
-                    <img src="../img/thankyou-draft2-2x.png" srcset="../img/thankyou-draft2-1x.png 1x, ../img/thankyou-draft2-2x.png 2x"
+                    <img src="../img/thankyou-draft2-2x.png"
+                        srcset="../img/thankyou-draft2-1x.png 1x, ../img/thankyou-draft2-2x.png 2x"
                         alt="Business card with doodle graphics on bright orange background">
                 </figure>
 
                 <figure class="image-caption-box">
-                    <img src="../img/thankyou-draft1-2x.png" srcset="../img/thankyou-draft1-1x.png 1x, ../img/thankyou-draft1-2x.png 2x"
+                    <img src="../img/thankyou-draft1-2x.png"
+                        srcset="../img/thankyou-draft1-1x.png 1x, ../img/thankyou-draft1-2x.png 2x"
                         alt="Business card with doodle graphics and positive affirmation stickers on hot pink background">
                     <figcaption class="p1 image-caption">initial business card iterations</figcaption>
                 </figure>
@@ -110,7 +139,8 @@
                 <figure class="image-caption-box">
                     <img src="../img/thankyou2-2x.jpg" srcset="../img/thankyou2-1x.jpg 1x, ../img/thankyou2-2x.jpg 2x"
                         alt="Front of business/thank you card with logo and speech bubble to write personalized note in">
-                    <figcaption class="p1 image-caption">final business/thank you card included with purchase</figcaption>
+                    <figcaption class="p1 image-caption">final business/thank you card included with purchase
+                    </figcaption>
                 </figure>
             </div>
 
@@ -118,7 +148,10 @@
             <div class="section-container">
                 <section> <!-- project reflection -->
                     <h4>reflection</h4>
-                    <p>I learned about the many channels one can use to create a cohesive brand identity in this project. I am proud of the results, but I anticipate the branding will continue to evolve as I grow as an artist. For now, I am satisfied with the branding but I look forward to updating it continually as I improve as a ceramist and designer.</p>
+                    <p>I learned about the many channels one can use to create a cohesive brand identity in this
+                        project. I am proud of the results, but I anticipate the branding will continue to evolve as I
+                        grow as an artist. For now, I am satisfied with the branding but I look forward to updating it
+                        continually as I improve as a ceramist and designer.</p>
 
                     <a href="https://www.etsy.com/ca/shop/artisticparrot">view artisticparrot etsy shop</a>
                 </section>
@@ -127,7 +160,7 @@
 
 
 
-        </section>
+        </div>
 
 
 
@@ -135,7 +168,8 @@
         <footer>
             <!-- back to top/back home links -->
             <nav class="box-header">
-                <a href="../html/artisticparrot.html" class="box-header small-margin-bottom padding-right">back to top</a>
+                <a href="../html/artisticparrot.html" class="box-header small-margin-bottom padding-right">back to
+                    top</a>
                 <a href="../index.html" class="box-header small-margin-bottom">back home</a>
             </nav>
 
