--- a/html/between-dreams.html
+++ b/html/between-dreams.html
@@ -35,12 +35,13 @@
             </nav>
         </header>
 
-        <section class="medium-margin-bottom"> <!-- PROJECT CONTENT -->
+        <div class="medium-margin-bottom"> <!-- PROJECT CONTENT -->
             <section> <!-- project introduction -->
                 <div class="section-container">
                     <h2>Between Dreams and Reality (2022)</h2>
-                    <p>Graphic/interaction design course project exploring creation of visual identity, and cross-medium application to assets and 
-                     microsite prototype using Figma</p>
+                    <p>Graphic/interaction design course project exploring creation of visual identity, and cross-medium
+                        application to assets and
+                        microsite prototype using Figma</p>
                 </div>
 
                 <div class="image-box">
@@ -55,7 +56,9 @@
             <div class="section-container">
                 <section> <!-- project description -->
                     <h4>outcome</h4>
-                    <p> This project was centered around learning art direction and interaction design, and creating a graphic visual identity to iterate into a microsite prototype for a cultural arts client. Our microsite accompanies an art exhibition of tapestries telling the story of dreamlike
+                    <p> This project was centered around learning art direction and interaction design, and creating a
+                        graphic visual identity to iterate into a microsite prototype for a cultural arts client. Our
+                        microsite accompanies an art exhibition of tapestries telling the story of dreamlike
                         hallucinations experienced by the artist. The site walks users through the narrative, materials,
                         and
                         processes used to create the tapestries, enhancing understanding and appreciation while
@@ -74,17 +77,12 @@
 
                 <figure class="image-caption-box">
                     <img src="../img/video-hover.gif" alt="video of tapestry process video shown on hover">
-                </figure>
-
-
-                <figure class="image-caption-box">
-                    <img src="../img/ending.gif" alt="video of yarn type highlighting">
-                    <figcaption class="p1 image-caption">tapestry process videos shown on hover</figcaption>
+                    <figcaption class="p1 image-caption">process videos shown while hovering keywords</figcaption>
                 </figure>
 
                 <figure class="image-caption-box">
                     <img src="../img/yarns.gif" alt="video of yarn type highlighting">
-                    <figcaption class="p1 image-caption">yarn type highlighting</figcaption>
+                    <figcaption class="p1 image-caption">materials explanation</figcaption>
                 </figure>
 
                 <figure class="image-caption-box">
@@ -97,20 +95,29 @@
             <div class="section-container">
                 <section> <!-- project process -->
                     <h4>process</h4>
-                    <p>The project began by studying the work of precedent designers to extract guiding design qualities. These were applied in three weeks of graphic exploration, where concepts were explored extensively, before being expressed in final posters and graphic assets, culminating in the creation of three distinct art direction strategies.
-                        These
-                        qualities and principles influenced both our approach and our practice, encouraging us to expand
-                        our
-                        design processes beyond the design software.</p>
+                    <p>The project began by studying the work of precedent designers to extract guiding design
+                        qualities. These were applied in three weeks of graphic exploration, where concepts were
+                        explored extensively, before being refined into three distinct art direction strategies
+                        expressed as posters and graphic assets. The work of precedents influenced our semantic and
+                        practical approach and encouraged us to expand our exploration beyond design software, for
+                        example using photography and a scanner to abstract type and imagery.</p>
                 </section>
             </div>
 
             <div class="image-box">
 
                 <figure class="image-caption-box">
-                    <img src="../img/iterations-2x.png" srcset="../img/iterations-1x.png 1x, ../img/iterations-2x.png 2x"
-                        alt="Four abstract posters advertising art exhibition">
-                    <figcaption class="p1 image-caption">each concept was explored extensively</figcaption>
+                    <img src="../img/scan-2x.png" srcset="../img/scan-1x.png 1x, ../img/scan-2x.png 2x"
+                        alt="Title type and imagery distorted with a scanner">
+                    <figcaption class="p1 image-caption">exploring distortion of visual elements with a scanner
+                    </figcaption>
+                </figure>
+
+                <figure class="image-caption-box">
+                    <img src="../img/iterations-2x.png"
+                        srcset="../img/iterations-1x.png 1x, ../img/iterations-2x.png 2x"
+                        alt="Numerous poster iterations exploring layout for each visual identity">
+                    <figcaption class="p1 image-caption">exploration on Figma</figcaption>
                 </figure>
 
                 <figure class="image-caption-box">
@@ -145,7 +152,7 @@
             <div class="image-box">
                 <figure class="image-caption-box">
                     <img src="../img/identity1-2x.png" srcset="../img/identity1-1x.png 1x, ../img/identity1-2x.png 2x"
-                        class="image" alt="screenshot of game level one in cartoon rendering of bedroom">
+                        class="image" alt="Poster and brochure and book mockups to display visual identity">
                     <figcaption class="p1 image-caption">visual identity based on distorted imagery and
                         reversible
                         figure ground</figcaption>
@@ -153,7 +160,7 @@
 
                 <figure class="image-caption-box">
                     <img src="../img/identity2-2x.png" srcset="../img/identity2-1x.png 1x, ../img/identity2-2x.png 2x"
-                        class="image" alt="screenshot of game level one in cartoon rendering of dining room">
+                        class="image" alt="Poster and various textiles to display visual identity">
                     <figcaption class="p1 image-caption">visual identity based on distorted type with layered
                         tapestry
                         imagery</figcaption>
@@ -179,8 +186,7 @@
             <div class="image-box">
                 <figure class="video-box">
                     <div class="iframe-container">
-                        <iframe height=200% src="https://www.youtube.com/embed/tfMshlMB3Gk" title="YouTube video player"
-                            frameborder="0"
+                        <iframe src="https://www.youtube.com/embed/tfMshlMB3Gk" title="YouTube video player"
                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                             allowfullscreen></iframe>
                     </div>
@@ -203,7 +209,7 @@
 
 
 
-        </section>
+        </div>
 
 
 
