--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -220,7 +220,7 @@
                     &lt;div class="image-box"&gt;<br>
                     &lt;figure class="video-box"&gt;<br>
                     &lt;div class="iframe-container"&gt;<br>
-                    &lt;iframe height=200% src="https://www.youtube.com/embed/tfMshlMB3Gk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>&lt;/iframe&gt;<br>
+                    &lt;iframe src="https://www.youtube.com/embed/tfMshlMB3Gk" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>&lt;/iframe&gt;<br>
                     &lt;/div&gt;<br>
                     &lt;/figure&gt;<br>
                     &lt;/div&gt;<br>
@@ -231,8 +231,8 @@
                     <div class="image-box">
                         <figure class="video-box">
                             <div class="iframe-container">
-                                <iframe height=200% src="https://www.youtube.com/embed/tfMshlMB3Gk"
-                                    title="YouTube video player" frameborder="0"
+                                <iframe src="https://www.youtube.com/embed/tfMshlMB3Gk"
+                                    title="YouTube video player"
                                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                                     allowfullscreen></iframe>
                             </div>
