--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -36,8 +36,10 @@
         <header>
             <nav class="box-header">
                 <a href="../index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
-                <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                <div class="link-stack">
+                    <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
+                    <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                </div>
             </nav>
         </header>
 
@@ -274,17 +276,20 @@
                     <code>
                     &lt;nav class="box-header"&gt;<br>
                     &lt;a href="index.html" class="site-title box-header box-header-title"&gt;olivia steed*&lt;/a&gt;<br>
+                    &lt;div class="link-stack"&gt;<br>
                     &lt;a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right"&gt;email&lt;/a&gt;<br>
                     &lt;a href="media/oliviasteed_resume.pdf" class="box-header box-header-link padding-right"&gt;resume&lt;/a&gt;<br>
+                    &lt;/div&gt;<br>
                     &lt;/nav&gt;<br>
                 </code>
 
                     <h5>rendered element</h5>
                     <nav class="box-header">
                         <a href="../index.html" class="site-title box-header box-header-title">olivia steed*</a>
-                        <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                        <a href="../media/oliviasteed_resume.pdf"
-                            class="box-header box-header-link padding-right">resume</a>
+                        <div class="link-stack">
+                            <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
+                            <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                        </div>
                     </nav>
 
                 </section>
@@ -296,19 +301,19 @@
 
                     <h5>code</h5>
                     <code>
-                    &lt;div class="box-header footer-spacing"&gt; <br>
+                    &lt;div class="box-project footer-spacing"&gt; <br>
                     &lt;div class="box-header-title"&gt;<br>
                     &lt;h3 class="padding-right"&gt;Projects&lt;/h3&gt;<br>
                             &lt;/div&gt;<br>
     
                             &lt;div class="box-footer"&gt;<br>
                             &lt;div class="box-footer-project"&gt;<br>
-                                &lt;a href="../html/between-dreams.html" class="box-header"&gt;between dreams and reality&lt;/a&gt;<br>
+                                &lt;a href="../html/between-dreams.html" class="box-project"&gt;between dreams and reality&lt;/a&gt;<br>
                                 &lt;p class="p1"&gt;visual identity and microsite prototype&lt;/p&gt;<br>
                                     &lt;/div&gt;<br>
     
                             &lt;div class="box-footer-project"&gt;<br>
-                                &lt;a href="../html/artisticparrot.html" class="box-header"&gt;artisticparrot branding&lt;/a&gt;<br>
+                                &lt;a href="../html/artisticparrot.html" class="box-project"&gt;artisticparrot branding&lt;/a&gt;<br>
                                 &lt;p class="p1"&gt;web and print brand identity&lt;/p&gt;<br>
                                 &lt;/div&gt;<br>
                                 &lt;/div&gt;<br>
@@ -316,19 +321,19 @@
                 </code>
 
                     <h5>rendered element</h5>
-                    <div class="box-header footer-spacing">
+                    <div class="box-project footer-spacing">
                         <div class="box-header-title">
                             <h3 class="padding-right">Projects</h3>
                         </div>
 
                         <div class="box-footer">
                             <div class="box-footer-project">
-                                <a href="../html/between-dreams.html" class="box-header">between dreams and reality</a>
+                                <a href="../html/between-dreams.html" class="box-project">between dreams and reality</a>
                                 <p class="p1">visual identity and microsite prototype</p>
                             </div>
 
                             <div class="box-footer-project">
-                                <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                                <a href="../html/artisticparrot.html" class="box-project">artisticparrot branding</a>
                                 <p class="p1">web and print brand identity</p>
                             </div>
                         </div>
@@ -370,19 +375,19 @@
             </nav>
 
             <!-- more projects -->
-            <div class="box-header footer-spacing">
+            <div class="box-project footer-spacing">
                 <div class="box-header-title">
                     <h3 class="padding-right">Projects</h3>
                 </div>
 
                 <div class="box-footer">
                     <div class="box-footer-project">
-                        <a href="../html/between-dreams.html" class="box-header">between dreams and reality</a>
+                        <a href="../html/between-dreams.html" class="box-project">between dreams and reality</a>
                         <p class="p1">visual identity and microsite prototype</p>
                     </div>
 
                     <div class="box-footer-project">
-                        <a href="../html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                        <a href="../html/artisticparrot.html" class="box-project">artisticparrot branding</a>
                         <p class="p1">web and print brand identity</p>
                     </div>
                 </div>
