--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -30,8 +30,10 @@
         <header>
             <nav class="box-header">
                 <a href="../index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
-                <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                <div class="link-stack">
+                    <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
+                    <a href="../media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                </div>
             </nav>
         </header>
 
@@ -167,21 +169,21 @@
 
         <footer>
             <!-- back to top/back home links -->
-            <nav class="box-header">
-                <a href="../html/artisticparrot.html" class="box-header small-margin-bottom padding-right">back to
+            <nav class="box-project">
+                <a href="../html/artisticparrot.html" class="box-project small-margin-bottom padding-right">back to
                     top</a>
-                <a href="../index.html" class="box-header small-margin-bottom">back home</a>
+                <a href="../index.html" class="box-project small-margin-bottom">back home</a>
             </nav>
 
             <!-- more projects -->
-            <div class="box-header footer-spacing">
+            <div class="box-project footer-spacing">
                 <div class="box-header-title">
                     <h3 class="padding-right">More Projects</h3>
                 </div>
 
                 <div class="box-footer">
                     <div class="box-footer-project">
-                        <a href="../html/between-dreams.html" class="box-header">between dreams and reality</a>
+                        <a href="../html/between-dreams.html" class="box-project">between dreams and reality</a>
                         <p class="p1">visual identity and microsite prototype</p>
                     </div>
                 </div>
