--- a/index.html
+++ b/index.html
@@ -33,33 +33,38 @@
             <header>
                 <nav class="box-header">
                     <a href="index.html" class="site-title box-header box-header-title title-gradient">olivia steed*</a>
-                    <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
-                    <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                    <div class="link-stack">
+                        <a href="mailto:osa12@sfu.ca" class="box-header box-header-link padding-right">email</a>
+                        <a href="media/oliviasteed_resume.pdf" class="box-header box-header-link">resume</a>
+                    </div>
                 </nav>
             </header>
 
 
             <section> <!-- bio/introduction -->
                 <div class="section-container">
-                    <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration and art direction, which I apply to distinct and cohesive visual identities. I’m currently in my third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> concentrating in design, and am interested in visual design and art direction.</h3>
+                    <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
+                        and art direction, which I apply to distinct and cohesive visual identities. I’m currently in my
+                        third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> concentrating
+                        in design, and am interested in visual design and art direction.</h3>
                 </div>
 
 
 
                 <!-- more projects -->
-                <div class="box-header footer-spacing">
+                <div class="box-project footer-spacing">
                     <div class="box-header-title">
                         <h3 class="padding-right">Projects</h3>
                     </div>
 
                     <div class="box-footer">
                         <div class="box-footer-project">
-                            <a href="html/between-dreams.html" class="box-header">between dreams and reality</a>
+                            <a href="html/between-dreams.html" class="box-project">between dreams and reality</a>
                             <p class="p1">visual identity and microsite prototype</p>
                         </div>
 
                         <div class="box-footer-project">
-                            <a href="html/artisticparrot.html" class="box-header">artisticparrot branding</a>
+                            <a href="html/artisticparrot.html" class="box-project">artisticparrot branding</a>
                             <p class="p1">web and print brand identity</p>
                         </div>
                     </div>
