--- a/html/styleguide.html
+++ b/html/styleguide.html
@@ -404,6 +404,8 @@
 
     </div> <!-- END OF CONTENT WRAPPER -->
 
+    <div class="cursor"></div>
+    
     <script src="../js/script.js"></script>
 
 </body>
