--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
 
 
-    <div class="cursor cursor-gradient"></div>
+    <!-- <div class="cursor cursor-gradient"></div> -->
 
     <div class="container">
 
@@ -44,9 +44,8 @@
             <section> <!-- bio/introduction -->
                 <div class="section-container">
                     <h3>My name is Olivia and I like making pretty things. My strengths are visual design, illustration
-                        and art direction, which I apply to distinct and cohesive visual identities. I’m currently in my
-                        third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> concentrating
-                        in design, and am interested in visual design and art direction.</h3>
+                        and art direction which I apply to create distinct and cohesive visual identities. I’m currently in my
+                        third year of studies at SFU’s <em>School of Interactive Arts and Technology</em> and am interested in creating unified visual experiences.</h3>
                 </div>
 
 
@@ -94,6 +93,7 @@
 
     </div> <!-- END OF CONTENT WRAPPER -->
 
+    <div class="cursor"></div>
 
     <script src="js/script.js"></script>
 
