--- a/html/artisticparrot.html
+++ b/html/artisticparrot.html
@@ -23,8 +23,6 @@
 
 <body>
 
-    <div class="cursor cursor-gradient"></div>
-
     <div class="container">
 
         <header>
@@ -201,6 +199,7 @@
 
     </div> <!-- END OF CONTENT WRAPPER -->
 
+    <div class="cursor"></div>
 
     <script src="../js/script.js"></script>
 
